rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__attr_timestamp_modified_focused_mid_edit_80x24.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "        ┌Change Attributes / Timestamps────────────────────────────────┐        ",
        "        │  Attributes                                                  │        ",
        "        │  [-] ReadOnly  [-] Hidden  [-] System  [-] Archive           │        ",
        "        │                                                              │        ",
        "        │  Timestamps                                                  │        ",
        "        │  Modified  [TIMESTAMP]                        [t:now]│        ",
        "        │  Accessed  <mixed>                                    [t:now]│        ",
        "        │  Created   <mixed>                                    [t:now]│        ",
        "        │                       [*OK*]  [Cancel]                       │        ",
        "        └──────────────────────────────────────────────────────────────┘        ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 39, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 8, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 11, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 69, y: 8, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 9, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 11, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 69, y: 9, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 11, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 69, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 11, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 26, y: 12, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 27, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 40, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 12, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 11, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 28, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 13, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 11, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 28, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 14, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
